test/fixtures/web-platform-tests/resources/webidl2/test/invalid/idl/record-key.widl
interface Foo {
  void foo(record<octet, any> param);
};
